--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME='Weather Forecast'
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -9,22 +9,21 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=weather-mysql-db
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=weatherApp
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=weather-redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -50,3 +49,16 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+WEATHER_FORECAST_API_URL=https://api.openweathermap.org/data/2.5/onecall
+WEATHER_FORECAST_APPID=
+WEATHER_FORECAST_ICON_URL=http://openweathermap.org/img/w/
+
+QUEUE_CONNECTION=rabbitmq
+RABBITMQ_DSN=amqp://
+RABBITMQ_QUEUE=default
+RABBITMQ_HOST=weather-rabbitmq
+RABBITMQ_VHOST=/
+RABBITMQ_USER=
+RABBITMQ_PASSWORD=
+RABBITMQ_ERLANG_COOKIE=This_is_a_very_long_string
